<resources>
    <string name="app_name">Cinephile</string>
    <string name="search_hint">Search movies...</string>
    <string name="search_button">Search</string>
    <string name="movie_director_prefix">Director: %1$s</string>
    <string name="movie_date_prefix">Release: %1$s</string>
    <string name="rating_badge">⭐ %.1f</string>
    <string name="your_rating">Your Rating</string>
    <string name="search_actor">Search actors...</string>
    <string name="search_director">Search directors...</string>
    <string name="results_from_cache">Results from cache</string>
    <string name="results_from_cache_with_timestamp">Results from cache (%1$s)</string>
    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="removed_from_watchlist">Removed from watchlist</string>
    <string name="undo">Undo</string>
    <string name="action_failed">Something went wrong</string>
    <string name="current_watchlist">Current</string>
    <string name="make_current">Make current</string>
    <string name="watchlist_set_current">%1$s is now the current watchlist</string>
    <string name="dialog_rename_title">Rename watchlist</string>
    <string name="dialog_rename_hint">Name</string>
    <string name="dialog_delete_title">Delete watchlist?</string>
    <string name="dialog_delete_message">This will remove the watchlist. Movies remain in your library.</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="menu_watchlist_more">More options</string>
    <string name="watchlist_navigate">Navigate to watchlist</string>
    <string name="new_watchlist">New Watchlist</string>
    <string name="no_results">No results found</string>
    <string name="error_loading">Error loading results</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading...</string>
    <string name="no_movies">No movies yet</string>
    <string name="recommendations_title">Recommendations</string>
    <string name="recommendations_subtitle">Based on your likes and ratings</string>
    <string name="recommendations_refresh">Refresh</string>
    <string name="recommendations_cached_badge">Offline cache</string>
    <string name="recommendations_empty">We don\u2019t have enough data yet. Try adding more favorites or ratings.</string>
    <string name="recommendations_error">Unable to load recommendations.</string>
    <string name="recommendations_greeting">Welcome back!</string>
    <string name="recommendations_headline">Discover your next favorite movie.</string>
    <string name="recommendations_search_placeholder">Search movies, actors, directors\u2026</string>
    <string name="recommendations_categories">Categories</string>
    <string name="recommendations_latest">Latest movies</string>
    <string name="recommendations_upcoming">Upcoming</string>
    <string name="recommendations_for_you">Recommended for you</string>
    <string name="watchlist_add_button">Add to watchlist</string>
    <string name="watchlist_remove_button">Remove from watchlist</string>
    <string name="watchlist_picker_title">Select a watchlist</string>
    <string name="watchlist_picker_create">Create new watchlist\u2026</string>
    <string name="watchlist_create_title">Create watchlist</string>
    <string name="watchlist_create_hint">Watchlist name</string>
    <string name="watchlist_create_confirm">Create</string>
    <string name="validation_required">Required</string>
    <string name="details_similar_label">More like this</string>
    <string name="actor_biography">About</string>
    <string name="actor_filmography">Filmography</string>
    <string name="actor_movies_empty">No credited movies found.</string>
    <string name="actor_birth_date">Birth date</string>
    <string name="actor_birth_place">Birth place</string>
    <string name="actor_death_date">Death date</string>
    <string name="actor_also_known">Also known as</string>
    <string name="actor_role_character">as %1$s</string>
    <string name="series_details_not_available">Series details coming soon</string>
    <plurals name="actor_age_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <string name="movie_poster">Movie poster</string>
    <string name="person_avatar">Person avatar</string>
    <string name="actor_profile_image">Actor profile image</string>
    <string name="actor_all_projects">All projects</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="recommendations_popular">Popular movies</string>
    <string name="filter_all">All</string>
    <string name="filter_movies">Movies</string>
    <string name="filter_series">Series</string>
    <string name="filter_categories">Categories</string>
    <string name="filter_countries">Countries</string>
    <string name="filter_year">Year</string>
    <string name="filter_rating">Rating</string>
    <string name="filter_age_restriction">Age Restriction</string>
    <string name="filter_sort_by">Sort by</string>
    <string name="filter_any">Any</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_show">Show</string>
    <string name="filter_filters">Filters</string>
    <string name="filter_rating_from_to">from %1$d to %2$d</string>
    <string name="filter_sort_rating">Rating</string>
    <string name="filter_sort_popularity">Popularity</string>
    <string name="filter_sort_newness">Newness</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_profile">Profile</string>
    <string name="language_english">English</string>
    <string name="language_french">Français</string>
    <string name="language_russian">Русский</string>
    <string name="language_select">Select language</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="nav_back">Back</string>
</resources>